--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Add a Todo Item:</h1>
     <form action="add" method="POST">
+        {% csrf_token %}
         <div>
             <p>
                 <label for="id_name">Name: </label>
@@ -17,7 +18,7 @@
         <div>
             <p>
                 <label for="id_done">Done: </label>
-                <input type="text" id="id_done" name="item_done">
+                <input type="checkbox" id="id_done" name="done">
             </p>
         </div>
         <div>
